update img urls

--- a/index.html
+++ b/index.html
@@ -385,13 +385,13 @@
         
 
         <a class="w3-bar-item" href="http://167.99.145.51/dw/teacher.denny/img/eyes.jpg" target="new">
-        <img  src="img/eyes.jpg" style="width:120px">
+        <img  src="http://167.99.145.51/dw/teacher.denny/img/eyes.jpg" style="width:120px">
         </a>
         <a class="w3-bar-item" href="http://167.99.145.51/dw/teacher.denny/img/spring.jpg" target="new">
-        <img  src="img/spring.jpg" style="width:120px">
+        <img  src="http://167.99.145.51/dw/teacher.denny/img/spring.jpg" style="width:120px">
         </a>
         <a class="w3-bar-item" href="http://167.99.145.51/dw/teacher.denny/img/chips.jpg" target="new">
-        <img   src="img/chips.jpg" style="width:120px">
+        <img   src="http://167.99.145.51/dw/teacher.denny/img/chips.jpg" style="width:120px">
         </a>
         </div>
         <!-- -----------end w3-bar ----------------- -->
