avatar image size

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="dw-theme-l2 w3-card-4 ">
           <div class="w3-display-container dw-mix-multiply-pink">
             <picture>
-              <source media="(min-width: 800px)" srcset="/img/td_650.jpg">
-              <source media="(min-width: 600px)" srcset="/img/td_465.jpg">
+              <source media="(min-width: 650px)" srcset="/img/td_650.jpg">
+              <source media="(min-width: 465px)" srcset="/img/td_465.jpg">
               <img class="dw-border-solid-blue-1  " src="/img/td.jpg" style="width:100%" alt="Avatar">
             </picture>
 
@@ -69,7 +69,7 @@
 
               </i>
 
-              <a class="w3-small" style="word-wrap: break-word;" href="mailt0:dennismwygant@gmail.com">dennismwygant@gmail.com</a>
+              <a class="w3-small" style="word-wrap: break-word;" href="mailto:dennismwygant@gmail.com">dennismwygant@gmail.com</a>
 
             </p>
             <p>
