--- a/index.html
+++ b/index.html
@@ -83,22 +83,27 @@
           </div>
 
       
-
-
-
           <!-- --------------------------------- -->
           <div class="w3-panel dw-theme-l2">
-
 
             <div class="w3-card w3-padding dw-theme-l3 ">
 
               <head class="">
-                <h2 class="w3-center dw-border-inset-blue-1 sticky ">Need a web site?</h2>
+                <h2 class="w3-center dw-dark-bg dw-border-inset-blue-1 dw-red sticky ">Need a web site?</h2>
               </head>
               <h6>
-                I design websites and explore the latest web technologies in my free time. I am available for hire.
-                <br>
-                <br>
+                I design websites in my free time. I am available for hire. I can update your website or create one for you.
+                 <br>
+                <ul class="w3-small">
+                  <li>Fully Responsive Website</li>
+                  <li>Search Engine Friendly</li>
+                  <li>Easy to use admin panel</li>
+                  <li>Design and layout revisions</li>
+                  <li>Image optimization</li>
+                  <li>Social Media Integration</li>
+                  <li>Contact Forms</li>
+                  <li>Google Maps, Newsletter Subscription & Mailing list</li>
+                </ul>
                 check out some of my latest work:
               </h6>
               <button onclick="document.getElementById('id01').style.display='block'" class="w3-button dw-theme-d1">My Work</button>
