--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 
-
 <!--=
      // 
     //  
@@ -14,9 +13,9 @@
 
             <meta charset="UTF-8">
 
-            <meta name="description" content="Hi, my name is Denny. I'm an American but I live in Ho Chi Minh City, Vietnam where I am currently working part time as an English teacher.">
+            <meta name="description" content="Hi, my name is Denny. I'm an American but I live in Ho Chi Minh City, Vietnam. I am an English teacher and I build exciting websites.">
 
-            <meta name="keywords" content="english teacher, denny, denny in saigon, teaching english, american, expat, developer, websites, wordpress, Javascript, php">
+            <meta name="keywords" content="english teacher, developer, denny in saigon, teaching english, american expat, wordpress, websites, for hire, Javascript, php">
 
             <meta name="author" content="Vdenny.com">
 
@@ -25,7 +24,6 @@
      // 
     //  
      =-->
-
 
 
 <!-- Custom Style Sheet -->
