--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <meta name="author" content="Vdenny.com">
 
             <meta name="viewport" content="width=device-width, initial-scale=1">
+
+            <!-- for bing webmaster tools  -->
+            <meta name="msvalidate.01" content="1A19480791B82903A87126FF40CB35E6" />
 <!--=
      // 
     //  
