--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
 <!-- Custom Style Sheet -->
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="sass/main.css">
-<!-- <link rel="stylesheet" href="sass/dw-theme-blue.css"> -->
-<!-- <link rel="stylesheet" href="css/supersearch.css"> -->
-
 
 <!-- Fonts -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-<!-- Latest compiled and minified CSS -->
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
- -->
 <!-- w3 css -->
-<link rel="stylesheet" href="../dw/css/w3.css"> 
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 
 
 <link rel="icon" href="td.png" type="image/png">
@@ -369,17 +363,6 @@
 
 </body>
 
-<!-- custom -->
-<script>
-	
-	const doc_title = "Teacher Denny Was here";
-	const doc_author = "Denny Wygant";
-
-
-  var title = document.getElementsByTagName("TITLE");
-  title[0].innerHTML = doc_title;
-
-</script>
 
 </html>
 
